2002-10-10  Marcus Brinkmann  <marcus@gnu.org>

	* display.c (handle_esc_bracket): Implement <bw> for <cub1>.

2002-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* pager.c, pager.h: New file.
	* Makefile (SRCS): Add pager.c.
	(LCLHDRS): Add pager.h.
	* display.c: Do not include <hurd/pager.h>, <sys/mman.h>,
	<sys/io.h>, <fcntl.h> and <sys/fcntl.h>.  Include <hurd/ports.h>
	and "pager.h".
	(struct display): Replace member PAGER and MEMOBJ with USER_PAGER.
	(display_get_filemap): Implement with user_pager_get_filemap.
	(user_destroy): Implement with user_pager_destroy.
	(user_create): Implement partially with user_create.
	(display_init): Call user_pager_init.
	(struct user_pager_info, pager_bucket, pager_clear_user_data,
	pager_read_page, pager_write_page, pager_unlock_page,
	pager_report_extent, pager_dropweak, service_paging_requests):
	Move to ...
	* pager.c: ... here.

	* console.c: Include <mach.h>.
	(netfs_S_dir_notice_changes): New variable PREQ.  Clean out the
	dead wood, eh, dead name notifications from the CONS->dirmod_req
	list.
	* display.c (struct user_pager_info): Drop members DISPLAY and P.
	(struct display): Remove member UPI and add member PAGER.
	(pager_report_extent): Remove local variable DISPLAY, use UPI
	directly.
	(user_create): New variable UPI to hold the user pager info.
	Modify the code to match new struct organization.
	(user_destroy): Unmap the user data.
	(display_notice_changes): Request dead-name notifications.
	(free_modreqs): Cancel dead-name notification request before
	deallocation send right.
	(display_notice_filechange): Likewise.
	(do_mach_notify_msg_accepted): Likewise.
	(display_destroy): Take DISPLAY->lock while operating.  Reset the
	filemod_reqs and filemod_reqs_pending members of DISPLAY to NULL.
	(do_mach_notify_port_deleted): Add comment.
	(do_mach_notify_dead_name): Implement.
	(do_mach_notify_no_senders): Implement by delegating to libports.
	(do_mach_notify_send_once): Don't fail.
