@@ -1,5 +1,8 @@
 2002-10-10  Marcus Brinkmann  <marcus@gnu.org>
 
+	* hurd.ti (cub1): Change from \E[D to ^H.
+	* display.c (handle_esc_bracket): Revert last change.
+
 	* display.c (handle_esc_bracket): Implement <bw> for <cub1>.
 
 2002-09-22  Marcus Brinkmann  <marcus@gnu.org>
